# Haskell-exercises

./: .gitignore  Parser.hs  countdown.hs  digits.hs  eq.hs  hanoi.hs  instances.hs  listify.hs  mood.hs  newton.hs  registereduser.hs  testing.hs
effective-haskell/: 2  TupleType.hs  TypeMagic1.hs  Undefined.hs  calculator.hs  customReverse.hs  factorial.hs  fibonacci.hs  fibs.hs  foldExamples.hs  linkedlist.hs  manualCurry.hs  mapExamples.hs  modifypair.hs  myConcatty.hs  peano.hs  radsToDegs.hs  recordSyntax.hs  sumBiggest.hs  zipMyPants.hs
effective-haskell/creating-and-structuring/: CHANGELOG.md  LICENSE  creating-and-structuring-hs.cabal
effective-haskell/functions-as-values/: parserExample.hs  plantingTrees.hs  velocity.hs
effective-haskell/import-demo/: LICENSE  import-demo.cabal
effective-haskell/import-demo/app/: Main.hs
gambling/: gambling.hs
hangman/: hangman.hs
nim/: nim.hs
sudoku/: sudoku.hs
