cabal-version:      3.0
name:               creating-and-structuring-hs
version:            0.1.0.0

-- synopsis:

-- description:

license:            BSD-3-Clause

license-file:       LICENSE

author:             Davy

maintainer:         d.vdschoot@gmail.com

-- copyright:
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- extra-source-files:

common warnings
    ghc-options: -Wall -O1

library
    import:           warnings
    exposed-modules:  MyLib
    -- Modules included in this library but not exported.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010
executable creating-and-structuring-hs
    import:           warnings
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.17.2.1,
        creating-and-structuring-hs
    hs-source-dirs:   app
    default-language: Haskell2010
test-suite creating-and-structuring-hs-test
    import:           warnings
    default-language: Haskell2010
    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    -- Test dependencies.
    build-depends:
        base ^>=4.17.2.1,
        creating-and-structuring-hs
